syntax = "proto3";

option java_multiple_files = true;
package com.codenotfound.grpc.helloworld;

message Person {
  oneof Ident {
    string first_name = 1;
    string last_name = 2;
    NumText num_text = 4;
  }
}

message NumText{
  int32 num = 1;
  string text = 2;
}

message Greeting {
  string message = 1;
}

service HelloWorldService {
  rpc sayHello (Person) returns (Greeting);
}
